[IMP] account*, hr_expense, payment*, l10n*: account payment methods refactoring
Since 18.0, payments do not always create a payment entry. This creates a couple of side-effects impacting the meaning of what payments are across the application. While payments with outstanding account and journal entries have a meaning in terms of accounting, payments without journal entries are just a business indication that a payment will occur. 

The following changes have been made:

-Journals are no longer mandatory on the payment form view and the invoice payment wizard.

-Inbound/outbound payment tabs on the journal are removed, the payment method line model is completely removed.

-The outstanding payment account will now be set on the journal and only journals with this account set will appear on the payment forms/wizards. When set, if the account was not reconcilable, it will be set to reconcilable.

-A payment method view will now be accessible from the accounting configuration menu tab, here the available payment methods for the company will be shown and particular localization settings can be set up: including the l10n_it_payment_method_code, l10n_nz_payment_listing_indicator and the other configurations that used to be on the journal.

-Payment methods with configurations will be instantiated for each company, while those without configurations (like manual, batch etc.) will be shared between all and won't belong to any specific company.

-For payments with withholding taxes the journal will be required.

-Payment providers will now all be linked to one payment method: 'Online Payment Provider' and it wont' be possible to make inbound payment transactions through the account payment form/wizard anymore.

-The only payment provider that will have its own account payment method is Sepa Direct Debit which needs to be identifiable in order to batch the payments for the xml file generation.

-Partners' preferred payment methods are now chosen from the payment methods instea

--- a/addons/account/views/account_journal_views.xml
+++ b/addons/account/views/account_journal_views.xml
@@ -91,6 +91,10 @@
                                                required="type in ('bank', 'cash', 'credit')"
                                                options="{'no_quick_create': True}"
                                                groups="account.group_account_readonly"/>
+                                        <field name="outstanding_payment_account_id"
+                                               invisible="type not in ('bank', 'cash', 'credit')"
+                                               options="{'no_quick_create': True}"
+                                               groups="account.group_account_readonly"/>
                                         <field name="non_deductible_account_id"
                                                invisible="type != 'purchase'"
                                                options="{'no_quick_create': True}"
@@ -116,44 +120,7 @@
                                     </group>
                                 </group>
                             </page>
-                            <page id="inbound_payment_settings" string="Incoming Payments" name="page_incoming_payments" invisible="type not in ['cash', 'bank', 'credit']">
-                                <field name="available_payment_method_ids" invisible="1"/>
-                                <field name="inbound_payment_method_line_ids" nolabel="1" context="{'default_payment_type': 'inbound'}">
-                                    <list string="Payment Methods" editable="bottom">
-                                        <field name="available_payment_method_ids" column_invisible="True"/>
-                                        <field name="payment_type" column_invisible="True"/>
-                                        <field name="company_id" column_invisible="True"/>
-                                        <field name="sequence" widget="handle"/>
-                                        <field name="payment_method_id" options="{'no_create': True, 'no_open': True}"/>
-                                        <field name="name"/>
-                                        <field name="payment_account_id"
-                                               placeholder="No payment journal entries"
-                                               string="Outstanding Receipts accounts"
-                                               options="{'no_quick_create': True}"
-                                               groups="account.group_account_readonly"/>
-                                    </list>
-                                </field>
-                            </page>
-                            <page id="outbound_payment_settings" string="Outgoing Payments" name="page_outgoing_payments" invisible="type not in ['cash', 'bank', 'credit']">
-                                    <field name="outbound_payment_method_line_ids" nolabel="1" context="{'default_payment_type': 'outbound'}">
-                                        <list string="Payment Methods" editable="bottom">
-                                            <field name="available_payment_method_ids" column_invisible="True"/>
-                                            <field name="payment_type" column_invisible="True"/>
-                                            <field name="company_id" column_invisible="True"/>
-                                            <field name="sequence" widget="handle"/>
-                                            <field name="payment_method_id" options="{'no_create': True, 'no_open': True}"/>
-                                            <field name="name"/>
-                                            <field name="payment_account_id"
-                                                   placeholder="No payment journal entries"
-                                                   string="Outstanding Payments accounts"
-                                                   options="{'no_quick_create': True}"
-                                                   groups="account.group_account_readonly"/>
-                                        </list>
-                                    </field>
-                                    <field name="selected_payment_method_codes" invisible="1"/>
-                                    <group name="outgoing_payment" />
-                            </page>
-                            <page name="advanced_settings" string="Advanced Settings" invisible="type in ['bank', 'cash']">
+                            <page id="advanced_settings" name="advanced_settings" string="Advanced Settings">
                                 <group>
                                     <group string="Automation" groups="account.group_account_manager">
                                         <field name="restrict_mode_hash_table" groups="account.group_account_readonly" invisible="type not in ['sale', 'purchase', 'general']"
