--- a/addons/account/views/account_menuitem.xml
+++ b/addons/account/views/account_menuitem.xml
@@ -61,7 +61,7 @@
                 <menuitem id="menu_action_incoterm_open" action="action_incoterms_tree" groups="base.group_no_one" sequence="20"/>
                 <menuitem id="menu_product_product_categories" name="Product Categories" action="product.product_category_action_form" sequence="30"/>
             </menuitem>
-            <menuitem id="root_payment_menu" name="Online Payments" groups="account.group_account_manager" sequence="30"/>
+            <menuitem id="root_payment_menu" name="Payments" groups="account.group_account_manager" sequence="30"/>
             <menuitem id="menu_analytic_accounting" name="Analytic Accounting" groups="analytic.group_analytic_accounting" sequence="40">
                 <menuitem id="menu_analytic__distribution_model" name="Analytic Distribution Models" action="analytic.action_analytic_distribution_model" groups="analytic.group_analytic_accounting" sequence="10"/>
                 <menuitem id="account_analytic_def_account" action="analytic.action_account_analytic_account_form" groups="analytic.group_analytic_accounting" sequence="20"/>
