--- a/addons/account_payment/views/account_payment_menus.xml
+++ b/addons/account_payment/views/account_payment_menus.xml
@@ -2,19 +2,24 @@
 <odoo>
 
     <menuitem action="payment.action_payment_provider"
+        name="Online Payment Providers"
         id="payment_provider_menu"
         parent="account.root_payment_menu"
         sequence="10"/>
     <menuitem action="payment.action_payment_method"
+        name="Online Payment Methods"
         id="payment_method_menu"
         parent="account.root_payment_menu"
+        groups="base.group_no_one"
         sequence="15"/>
     <menuitem action="payment.action_payment_token"
+        name="Online Payment Tokens"
         id="payment_token_menu"
         parent="account.root_payment_menu"
         groups="base.group_no_one"
         sequence="20"/>
     <menuitem action="payment.action_payment_transaction"
+        name="Online Payment Transactions"
         id="payment_transaction_menu"
         parent="account.root_payment_menu"
         groups="base.group_no_one"
