--- a/addons/account_payment/views/account_payment_views.xml
+++ b/addons/account_payment/views/account_payment_views.xml
@@ -26,16 +26,8 @@
             </xpath>
             <xpath expr='//group[2]' position="inside">
                 <field name="source_payment_id" invisible="not source_payment_id"/>
-                <field name="payment_transaction_id" groups="base.group_no_one" invisible="not use_electronic_payment_method"/>
+                <field name="payment_transaction_id" groups="base.group_no_one" invisible="payment_method_code != 'online_payment_provider'"/>
             </xpath>
-            <field name="payment_method_line_id" position="after">
-                <field name="payment_method_code" invisible="1"/>
-                <field name="suitable_payment_token_ids" invisible="1"/>
-                <field name="use_electronic_payment_method" invisible="1"/>
-                <field name="payment_token_id" options="{'no_create': True}"
-                    invisible="not use_electronic_payment_method"
-                    readonly="state != 'draft'"/>
-            </field>
         </field>
     </record>
 
