--- a/addons/hr_expense/views/res_config_settings_views.xml
+++ b/addons/hr_expense/views/res_config_settings_views.xml
@@ -50,11 +50,15 @@
                         <block title="Accounting">
                             <setting company_dependent="1" help="Default accounting journal for expenses paid by employees."
                                      string="Employee Expense Journal">
-                                <field name="expense_journal_id"/>
+                                <field name="employee_paid_expense_journal_id"/>
+                            </setting>
+                            <setting company_dependent="1" help="Default accounting journal for expenses paid by the company."
+                                     string="Company Expense Journal">
+                                <field name="company_paid_expense_journal_id"/>
                             </setting>
                             <setting company_dependent="1" string="Payment methods"
                                      help="Payment method allowed for expenses paid by company.">
-                                <field name="company_expense_allowed_payment_method_line_ids" widget="many2many_tags"
+                                <field name="company_expense_allowed_payment_method_ids" widget="many2many_tags"
                                        placeholder="All payment methods allowed" options="{'no_create': True}"/>
                             </setting>
                         </block>
