--- a/addons/l10n_jo_edi/views/account_move_views.xml
+++ b/addons/l10n_jo_edi/views/account_move_views.xml
@@ -10,6 +10,9 @@
                     <field name="l10n_jo_edi_invoice_type"
                         readonly="state != 'draft'"
                         invisible="country_code != 'JO' or move_type not in ('out_invoice', 'out_refund')"/>
+                    <field name="l10n_jo_payment_method"
+                        readonly="state != 'draft'"
+                        invisible="country_code != 'JO' or move_type not in ('out_invoice', 'out_refund')"/>
                 </xpath>
                 <xpath expr="//sheet" position="before">
                     <div class="alert alert-warning" role="alert" invisible="not l10n_jo_edi_error">
@@ -40,6 +43,7 @@
             <field name="arch" type="xml">
                 <field name="payment_reference" position="before">
                     <field name="l10n_jo_edi_invoice_type" string="JoFotara Invoice Type" optional="hide"/>
+                    <field name="l10n_jo_payment_method" string="JoFotara Payment Method" optional="hide"/>
                     <field name="l10n_jo_edi_state" optional="hide"/>
                     <field name="l10n_jo_edi_error" optional="hide"/>
                 </field>
@@ -53,6 +57,7 @@
             <field name="arch" type="xml">
                 <field name="payment_reference" position="before">
                     <field name="l10n_jo_edi_invoice_type" string="JoFotara Invoice Type" optional="hide"/>
+                    <field name="l10n_jo_payment_method" string="JoFotara Payment Method" optional="hide"/>
                     <field name="l10n_jo_edi_state" optional="hide"/>
                     <field name="l10n_jo_edi_error" optional="hide"/>
                 </field>
