[IMP] mrp: Implement backward scheduling
Allow to schedule workorders 'backward'
: the last workorders in chain must finish at a specific datetime.
However if any of the first workorders should have been started in the past
scheduling is done 'forward' from now on.

task: 4504976

--- a/addons/mrp/views/stock_picking_views.xml
+++ b/addons/mrp/views/stock_picking_views.xml
@@ -174,6 +174,11 @@
                     </group>
                 </page>
             </xpath>
+            <xpath expr="//group[@name='locations']" position="after">
+                <group invisible="code != 'mrp_operation'" string="Scheduling">
+                    <field name="scheduling"/>
+                </group>
+            </xpath>
         </field>
     </record>
 
