--- a/addons/mrp/views/mrp_production_views.xml
+++ b/addons/mrp/views/mrp_production_views.xml
@@ -353,6 +353,7 @@
                                 <field name="delay_alert_date" invisible="1"/>
                                 <field nolabel="1" name="json_popover" widget="stock_rescheduling_popover" invisible="not json_popover"/>
                             </div>
+                            <field name="date_deadline" decoration-danger="state not in ('done', 'cancel') and date_finished &gt; date_deadline"/>
                             <field name="components_availability_state" invisible="1"/>
                             <field name="components_availability" invisible="state not in ['confirmed', 'progress']"
                                 decoration-success="reservation_state == 'assigned' or components_availability_state == 'available'"
@@ -539,6 +540,7 @@
                                     <field name="warehouse_id" invisible="1"/>
                                     <field name="location_dest_id" groups="stock.group_stock_multi_locations" options="{'no_create': True}" readonly="state != 'draft'"/>
                                     <field name="location_dest_id" groups="!stock.group_stock_multi_locations" invisible="1"/>
+                                    <field name="scheduling"/>
                                 </group>
                                 <group>
                                     <field name="origin" readonly="state in ['cancel', 'done']"/>
