[IMP] stock: clicking the quantity should lead to quants view
Right now the UX for updating the quantity is inconsistent. The
quantity field be editable or read-only, and there's a separate update
button that leads to the quants view. We can simplify it in such a way
that either the quantity is completely read-only or can be updated
through the quants view reached by clicking on the field.

There are four possibilities:
1. The user is not in `group_stock_user`, in which case this field is
completely invisible.
2. The user is in `group_stock_user` but not `group_stock_manager`,
in which case the field is readonly and has no action.
3. The user is in `group_stock_manager` but `show_qty_update_button`
isn't truthy (for example because storage locations aren't enabled),
in which case the field is simply editable.
4. The user is in `group_stock_manager` and `show_qty_update_button`
is true, in which case clicking the field directly leads to the quants
view.

Task ID: 4735259

--- a/addons/stock/views/product_views.xml
+++ b/addons/stock/views/product_views.xml
@@ -185,17 +185,16 @@
                     </div>
                     <field name="show_qty_update_button" invisible="1"/>
                     <label for="qty_available" class="oe_inline" invisible="not is_storable" groups="stock.group_stock_user"/>
-                    <div class="d-flex gap-2 align-items-baseline hover-show" invisible="not is_storable" groups="stock.group_stock_user">
-                        <field name="qty_available" style="max-width:100px;" readonly="True" groups="!stock.group_stock_manager"/>
-                        <field name="qty_available" style="max-width:100px;" readonly="show_qty_update_button" groups="stock.group_stock_manager"/>
+                    <div class="o_row" invisible="not is_storable" groups="stock.group_stock_user">
+                        <a type="object" name="action_open_quants"
+                           invisible="not show_qty_update_button" groups="stock.group_stock_manager">
+                            <field name="qty_available" readonly="True"/>
+                        </a>
+                        <field name="qty_available" invisible="show_qty_update_button" groups="stock.group_stock_manager" style="max-width: fit-content;"/>
+                        <field name="qty_available" readonly="True" groups="!stock.group_stock_manager" style="max-width: fit-content;"/>
                         <span name="uom_span" groups="uom.group_uom">
-                            <field name="uom_name" class="oe_inline me-5"/>
+                            <field name="uom_name" class="oe_inline"/>
                         </span>
-                        <button id="update_product_qty_button" string="Update" type="object"
-                            name="action_open_quants"
-                            groups="stock.group_stock_manager"
-                            invisible="not show_qty_update_button"
-                            class="btn btn-link py-0 btn-show"/>
                     </div>
                 </field>
                 <xpath expr="//group[@name='group_lots_and_weight']" position="inside">
