[IMP] website_sale: meta catalog xml data feed
To support seamless product promotion across multiple marketing channels,
including Meta platforms (e.g., Facebook and Instagram), this commit introduces
a new route (/meta.xml) that provides a product data feed compliant with
Meta’s catalog requirements.

This feed allows merchants to sync their product catalog with Meta's Commerce
Manager for use in dynamic ads, product tagging, and shop features.

Affected version-master
Task-4711960

--- a/addons/website_sale/views/gmc_templates.xml
+++ b/addons/website_sale/views/gmc_templates.xml
@@ -21,6 +21,7 @@
                         <t t-foreach="item['shipping']" t-as="shipping">
                             <g:shipping>
                                 <g:country t-out="shipping['country']"/>
+                                <g:region t-out="shipping['region']"/>
                                 <g:service t-out="shipping['service']"/>
                                 <g:price t-out="shipping['price']"/>
                             </g:shipping>
