[IMP] website_sale{_collect}: improve checkout page
Few things were implemented:
- On checkout page delivery methods and delivery addresses are switched
- Design improvements of the dms on checkout page
- Unrelated fields are hidden in the delivery form of pickup in store
- Improved the warning out-of-stock for pickup in store on checkout
  page.
- Now it is possible to update to maximum available quantity when a
  quantity of the product added to the cart exceeds the stock, instead
  of removing it completely from the cart.
- You can add a product to wishlist only if it is out of stock.
- Now when the pickup in store is enabled it automatically adds
  available warehouses. It is also published by default.

task-4307725

closes odoo/odoo#209545

Related: odoo/enterprise#88719
Related: odoo/upgrade#8397
Signed-off-by: Antoine Vandevenne (anv) <anv@odoo.com>

--- a/addons/delivery/views/delivery_carrier_views.xml
+++ b/addons/delivery/views/delivery_carrier_views.xml
@@ -147,7 +147,7 @@
                         </page>
                         <page string="Availability" name="destination">
                             <group col="1">
-                                <p>
+                                <p name="availability_description">
                                     Filling this form allows you to make the shipping method available according to the content of the order or its destination.
                                 </p>
                                 <group>
@@ -169,12 +169,12 @@
                                     </group>
                                     <group name="content" string="Content">
                                         <label for="max_weight"/>
-                                        <div class="o_row">
+                                        <div name="max_weight_row" class="o_row">
                                             <field name="max_weight" class="oe_inline"/>
                                             <field name="weight_uom_name"/>
                                         </div>
                                         <label for="max_volume"/>
-                                        <div class="o_row">
+                                        <div name="max_volume_row" class="o_row">
                                             <field name="max_volume" class="oe_inline"/>
                                             <field name="volume_uom_name"/>
                                         </div>
@@ -186,7 +186,7 @@
                                                 options="{'no_open': True, 'no_create': True}"/>
                                     </group>
                                 </group>
-                                <p class="fst-italic" invisible="country_ids">
+                                <p name="country_warning" class="fst-italic" invisible="country_ids">
                                     Please select a country before choosing a state or a zip prefix.
                                 </p>
                             </group>
