--- a/addons/website_sale_collect/views/templates.xml
+++ b/addons/website_sale_collect/views/templates.xml
@@ -36,7 +36,7 @@
                     'inStoreStockData': combination_info.get('in_store_stock_data', {}),
                     'deliveryStockData': combination_info.get('delivery_stock_data', {}),
                 })"
-                class="d-flex o_not_editable"
+                class="d-flex o_not_editable m-2"
             />
         </xpath>
     </template>
