--- a/addons/website_sale_mondialrelay/views/delivery_form_templates.xml
+++ b/addons/website_sale_mondialrelay/views/delivery_form_templates.xml
@@ -5,7 +5,7 @@
         <input name="o_delivery_radio" position="attributes">
             <attribute name="t-att-data-is-mondialrelay">dm.is_mondialrelay</attribute>
         </input>
-        <label class="o_delivery_carrier_label" position="after">
+        <label name="o_delivery_method_label" position="after">
             <small t-if="dm.is_mondialrelay" class="text-muted my-auto">
                 Click to choose a pickup point
             </small>
