[FIX] account: invoice edi format selection placeholder
The placeholder of the field "eInvoice format" (`invoice_edi_format`)
is confusing currently.
It says "XML format". It is unclear to the user what this means / will do.
This commit changes it to "Automatic Selection".

This better reflects what is happening:
If no value is selected for the field (= the placeholder is selected
in the UI) we try to automatically select a value.
(See `_compute_invoice_edi_format` / `_get_suggested_invoice_edi_format`
on model 'res.partner')

part-of
task-4737164

--- a/addons/account/views/partner_view.xml
+++ b/addons/account/views/partner_view.xml
@@ -258,7 +258,7 @@
                                    groups="account.group_account_invoice,account.group_account_readonly">
                                 <field name="invoice_sending_method"/>
                                 <field name="invoice_edi_format"
-                                       placeholder="XML format"
+                                       placeholder="Automatic Selection"
                                        invisible="not display_invoice_edi_format"/>
                                 <field name="invoice_template_pdf_report_id"
                                        invisible="not display_invoice_template_pdf_report_id"
